order-book: show prices in uBTC for now (to avoid confusion with place-order modal). Align Ask quantity and price to the right.

--- a/src/components/page-issuance-details/orders-grid/orders-grid.less
+++ b/src/components/page-issuance-details/orders-grid/orders-grid.less
@@ -24,4 +24,9 @@ orders-grid {
   .percentage-red {
     .loopLeft(100, rgba(255, 0, 0, .2))
   }
+  .order-type-SELL {
+    .column-quantity, .column-price {
+      text-align: right;
+    }
+  }
 }
